override_macro_tests/src/compile_errors/e02_overridable_on_other_item.rs
use override_macro::overridable;

#[overridable]
trait Trait02A {}

struct Struct02;

#[overridable]
impl Trait02A for Struct02 {}

fn main() {
}
